# Awesome-Skills

./: Makefile  README.md
labs/mini-duckdb/: README.md  go.mod
labs/mini-duckdb/pkg/executor/: aggregate.go  executor.go  scan.go
labs/mini-duckdb/pkg/storage/: column.go  compress.go  table.go
labs/mini-duckdb/pkg/vector/: batch.go  ops.go  vector.go
labs/mini-jit/: CMakeLists.txt  README.md
labs/mini-jit/examples/: brainfuck.cpp  calculator.cpp
labs/mini-jit/include/mini_jit/: codegen.hpp  compiler.hpp  jit.hpp  memory.hpp
labs/mini-jit/src/: codegen.cpp  compiler.cpp  jit.cpp  main.cpp  memory.cpp
labs/mini-jit/tests/: test_codegen.cpp
labs/mini-lsm/: Cargo.toml  README.md
labs/mini-lsm/src/: bloom.rs  compaction.rs  iterator.rs  lib.rs  lsm.rs  manifest.rs  memtable.rs  wal.rs
labs/mini-lsm/src/sstable/: block.rs  builder.rs  iterator.rs  mod.rs
labs/mini-raft/: Cargo.toml  README.md
labs/mini-raft/src/: election.rs  lib.rs  log.rs  node.rs  replication.rs  rpc.rs  state.rs  storage.rs
labs/mini-ray/: README.md  go.mod
labs/mini-ray/pkg/actor/: actor.go
labs/mini-ray/pkg/core/: errors.go  object.go  types.go
labs/mini-ray/pkg/scheduler/: scheduler.go
labs/mini-ray/pkg/store/: memory.go  store.go
labs/mini-ray/pkg/task/: dag.go  executor.go  task.go
labs/mini-ray/tests/: core_test.go  store_test.go
labs/mini-triton/: README.md  pyproject.toml
labs/mini-triton/examples/: attention.py  matmul.py  softmax.py  vector_add.py
labs/mini-triton/src/mini_triton/: __init__.py  language.py
labs/mini-triton/src/mini_triton/codegen/: __init__.py  base.py  numpy_gen.py
labs/mini-triton/src/mini_triton/frontend/: __init__.py  ast_visitor.py  type_inference.py
labs/mini-triton/src/mini_triton/ir/: __init__.py  builder.py  ops.py  printer.py  types.py
labs/mini-triton/src/mini_triton/runtime/: __init__.py  jit.py  launcher.py
labs/mini-triton/src/mini_triton/transforms/: __init__.py  canonicalize.py  loop_gen.py
labs/mini-triton/tests/: __init__.py  test_builder.py  test_codegen.py  test_e2e.py  test_ir.py  test_language.py  test_printer.py  test_types.py
skills/: mentor.md
