[package]
name = "mini-lsm"
version = "0.1.0"
edition = "2021"
description = "A pedagogical implementation of a Log-Structured Merge Tree storage engine"
license = "MIT"

[dependencies]
bytes = "1"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"
thiserror = "1"
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
tempfile = "3"
rand = "0.8"
