[package]
name = "mini-raft"
version = "0.1.0"
edition = "2021"
description = "A pedagogical implementation of the Raft consensus algorithm"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
